# freq_counter

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: cmplx_funcs.h  fourier.h  freq_counter.h  interpolation.h  user_types.h  utils.h  wave_generator.h  zero_crossing.h
src/: cmplx_funcs.cpp  fourier.cpp  freq_counter.cpp  interpolation.cpp  mian.cpp  utils.cpp  wave_generator.cpp  zero_crossing.cpp
